Update README with new sections and content